# geometry-dash-ai

./: .gitignore  README.md  main.py  pyproject.toml
ai-model/: .gitignore  README.md  agent.py  config.py  dylan.py  dylan_play.py  dylan_train.py  main.py  play.py  pyproject.toml  test.py  train.py  two_model_solution.py
ai-model/agent/: __init__.py  agent.py  agentACTION.py  agent_MoE_GRPO.py  agent_experts.py  agent_qwen_grpo.py
ai-model/geometry_dash_gym/: __init__.py
ai-model/geometry_dash_gym/envs/: __init__.py  geometry_dash.py
ai-model/geometry_dash_gym/wrappers/: __init__.py
ai-model/gym/: __init__.py  geometry_dash.py
ai-model/model/: NoisyNet.py  __init__.py  deeperdqn.py  dinov3.py  dqn.py  dqnexperts.py  duelingdqn.py  model.py
ai-model/previousModels/HSV/: modelReadMe.txt
ai-model/previousModels/HSV/backOnTrackCube/: 5000_12.0.pt  5029_18.4.pt  5031_18.4.pt  5033_18.4.pt  5034_18.4.pt  5061_18.4.pt  5082_18.8.pt  5086_20.2.pt  5101_20.2.pt  5119_20.5.pt  5120_22.6.pt  5132_24.7.pt  5181_26.3.pt  5256_28.7.pt  5280_28.8.pt  5344_29.1.pt  5441_30.1.pt  5447_30.8.pt  5464_31.4.pt  5500_14.1.pt  5554_34.4.pt  5632_34.4.pt  5663_34.4.pt  5671_34.4.pt  5677_34.4.pt  5678_34.4.pt  5681_34.4.pt  5733_35.4.pt  5781_35.5.pt  5788_35.5.pt  5792_38.5.pt  5801_38.6.pt  5837_47.1.pt  5896_47.1.pt  5944_47.3.pt  6000_0.1.pt  (+40 more)
ai-model/tcp/: __init__.py  client.py  server.py
ai-model/tcpclient/: __init__.py  client.py
ai-model/train/: train.py
ai-model/utils/: dqn_to_expert.py  dylan_view_checkpoint.py  merge_experts_dqnv2.py  view_checkpoint.py
(+429 files in other folders)
